// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSuggestionEngine passes custom entries to Engine 1`] = `
Array [
  Object {
    "datumTokenizer": [Function],
    "local": Array [
      "Portugal",
      "Palau",
      "Paraguay",
      "Qatar",
      "Andorra",
      "United Arab Emirates",
      "Afghanistan",
      "Antigua and Barbuda",
      "Albania",
      "Armenia",
      "Angola",
      "Argentina",
      "Austria",
      "Australia",
      "Azerbaijan",
      "Romania",
      "Bosnia and Herzegovina",
      "Barbados",
      "Serbia",
      "Bangladesh",
      "Russia",
      "Belgium",
      "Burkina Faso",
      "Rwanda",
      "Bulgaria",
      "Bahrain",
      "Burundi",
      "Benin",
      "Brunei",
      "Bolivia",
      "Saudi Arabia",
      "Solomon Islands",
      "Seychelles",
      "Brazil",
      "The Bahamas",
      "Sudan",
      "Sweden",
      "Bhutan",
      "Singapore",
      "Botswana",
      "Slovenia",
      "Belarus",
      "Slovakia",
      "Belize",
      "Sierra Leone",
      "San Marino",
      "Senegal",
      "Somalia",
      "Canada",
      "Suriname",
      "South Sudan",
      "Sao Tome and Principe",
      "Congo (Democratic Republic)",
      "USSR",
      "El Salvador",
      "Central African Republic",
      "Congo",
      "Switzerland",
      "Syria",
      "Ivory Coast",
      "Swaziland",
      "Chile",
      "Cameroon",
      "China",
      "Colombia",
      "Costa Rica",
      "Chad",
      "Czechoslovakia",
      "Cuba",
      "Togo",
      "Cape Verde",
      "Thailand",
      "Tajikistan",
      "Cyprus",
      "Czechia",
      "East Timor",
      "Turkmenistan",
      "Tunisia",
      "Tonga",
      "Turkey",
      "Trinidad and Tobago",
      "East Germany",
      "Germany",
      "Tuvalu",
      "Tanzania",
      "Djibouti",
      "Denmark",
      "Dominica",
      "Dominican Republic",
      "Ukraine",
      "Uganda",
      "Algeria",
      "United States",
      "Ecuador",
      "Estonia",
      "Egypt",
      "Uruguay",
      "Uzbekistan",
      "Vatican City",
      "St Vincent",
      "Eritrea",
      "Spain",
      "Venezuela",
      "Ethiopia",
      "Vietnam",
      "Vanuatu",
      "Finland",
      "Fiji",
      "Micronesia",
      "France",
      "Gabon",
      "United Kingdom",
      "Samoa",
      "Grenada",
      "Georgia",
      "Ghana",
      "The Gambia",
      "Guinea",
      "Equatorial Guinea",
      "Greece",
      "Guatemala",
      "Guinea-Bissau",
      "Guyana",
      "Kosovo",
      "Honduras",
      "Croatia",
      "Yemen",
      "Haiti",
      "Hungary",
      "Indonesia",
      "Ireland",
      "Yugoslavia",
      "Israel",
      "India",
      "South Africa",
      "Iraq",
      "Iran",
      "Iceland",
      "Italy",
      "Zambia",
      "Zimbabwe",
      "Jamaica",
      "Jordan",
      "Japan",
      "Kenya",
      "Kyrgyzstan",
      "Cambodia",
      "Kiribati",
      "Comoros",
      "St Kitts and Nevis",
      "North Korea",
      "South Korea",
      "Kuwait",
      "Kazakhstan",
      "Laos",
      "Lebanon",
      "St Lucia",
      "Liechtenstein",
      "Sri Lanka",
      "Liberia",
      "Lesotho",
      "Lithuania",
      "Luxembourg",
      "Latvia",
      "Libya",
      "Morocco",
      "Monaco",
      "Moldova",
      "Montenegro",
      "Madagascar",
      "Marshall Islands",
      "Macedonia",
      "Mali",
      "Burma",
      "Mongolia",
      "Mauritania",
      "Malta",
      "Mauritius",
      "Maldives",
      "Malawi",
      "Mexico",
      "Malaysia",
      "Mozambique",
      "Namibia",
      "Niger",
      "Nigeria",
      "Nicaragua",
      "Netherlands",
      "Norway",
      "Nepal",
      "Nauru",
      "New Zealand",
      "Oman",
      "Panama",
      "Peru",
      "Papua New Guinea",
      "Philippines",
      "Pakistan",
      "Poland",
      "Howland Island",
      "Akrotiri",
      "Puerto Rico",
      "Jarvis Island",
      "Taiwan",
      "Occupied Palestinian Territories",
      "Hong Kong",
      "Heard Island and McDonald Islands",
      "Kingman Reef",
      "Ceuta",
      "Saint-Martin (French part)",
      "Mayotte",
      "Baker Island",
      "Palmyra Atoll",
      "Macao",
      "Western Sahara",
      "Northern Mariana Islands",
      "Martinique",
      "Isle of Man",
      "Montserrat",
      "British Indian Ocean Territory",
      "Anguilla",
      "Ascension",
      "Sharjah",
      "Fujairah",
      "Antarctica",
      "British Virgin Islands",
      "American Samoa",
      "United States Virgin Islands",
      "RÃ©union",
      "New Caledonia",
      "Ras al-Khaimah",
      "Aruba",
      "Abu Dhabi",
      "Ã…land Islands",
      "Norfolk Island",
      "Jersey",
      "Falkland Islands",
      "Dhekelia",
      "Ajman",
      "Niue",
      "Johnston Atoll",
      "Faroe Islands",
      "Saint BarthÃ©lemy",
      "Saba",
      "Bermuda",
      "Bonaire",
      "Wallis and Futuna",
      "Saint Helena",
      "Umm al-Quwain",
      "Bouvet Island",
      "Tristan da Cunha",
      "Svalbard and Jan Mayen",
      "Sint Eustatius",
      "French Guiana",
      "Guernsey",
      "Cocos (Keeling) Islands",
      "Gibraltar",
      "Sint Maarten (Dutch part)",
      "Navassa Island",
      "Greenland",
      "Wake Island",
      "Cook Islands",
      "Guadeloupe",
      "South Georgia and South Sandwich Islands",
      "Melilla",
      "Guam",
      "Dubai",
      "Cayman Islands",
      "Turks and Caicos Islands",
      "French Southern Territories",
      "CuraÃ§ao",
      "Christmas Island",
      "British Antarctic Territory",
      "French Polynesia",
      "Tokelau",
      "Saint Pierre and Miquelon",
      "Pitcairn, Henderson, Ducie and Oeno Islands",
      "Midway Islands",
      "Great Britain",
      "Scotland",
      "Northern Ireland",
      "Wales",
      "England",
      "The Islamic Republic of Afghanistan",
      "AF",
      "afganistan",
      "afganastan",
      "afganestan",
      "afganhistan",
      "afghanistan",
      "afghanlstan",
      "afghistan",
      "Afghanestan",
      "Ø§ÙØºØ§Ù†Ø³ØªØ§Ù†",
      "Islamic Republic of Afghanistan",
      "The Republic of Albania",
      "AL",
      "alabnia",
      "albana",
      "albania",
      "albanian",
      "albanija",
      "albenia",
      "albiana",
      "alibania",
      "ShqipÃ«ria",
      "Republic of Albania",
      "The People's Democratic Republic of Algeria",
      "DZ",
      "aigeria",
      "alegeria",
      "algeir",
      "algeirs",
      "algeria",
      "algers",
      "algieria",
      "algiers",
      "Dzayer",
      "â´·âµ£â´°âµ¢â´»âµ”",
      "Al-JazÄ'ir",
      "Ø§Ù„Ø¬Ø²Ø§Ø¦Ø±",
      "People's Democratic Republic of Algeriaalgerie",
      "The Principality of Andorra",
      "AD",
      "Principality of Andorra",
      "The Republic of Angola",
      "AO",
      "angolo",
      "Republic of Angola",
      "AG",
      "The Argentine Republic",
      "AR",
      "Argenina",
      "Argentinia",
      "argentiha",
      "argentina",
      "argentine",
      "argentna",
      "Argentine Republic",
      "Genus Argentina",
      "The Republic of Armenia",
      "AM",
      "arima",
      "armenia",
      "arminia",
      "HayastÃ¡n",
      "Õ€Õ¡ÕµÕ¡Õ½Õ¿Õ¡Õ¶",
      "Republic of Armenia",
      "Hayastan",
      "The Commonwealth of Australia",
      "AU",
      "autralia",
      "ausralia",
      "austalia",
      "austraila",
      "austrailia",
      "australa",
      "australla",
      "austrilia",
      "austrlia",
      "avstralia",
      "avstria",
      "Commonwealth of Australia",
      "The Republic of Austria",
      "AT",
      "Ã–sterreich",
      "Osterreich",
      "Oesterreich",
      "Republic of Austria",
      "The Republic of Azerbaijan",
      "AZ",
      "azebaijan",
      "azeraijan",
      "azerbaijan",
      "azerbaijann",
      "azerbaisan",
      "azerbaizan",
      "azerbajan",
      "azerbaycan",
      "azerbayjan",
      "azerbeyjan",
      "azerbpijan",
      "AzÉ™rbaycan",
      "Republic of Azerbaijan",
      "Azerbaijani Republic",
      "Azerbajdzhan",
      "Azerbajdzhan Republic",
      "The Kingdom of Bahrain",
      "BH",
      "Al-Baá¸¥rayn",
      "Ø§Ù„Ø¨Ø­Ø±ÙŠÙ†",
      "Kingdom of Bahrain",
      "State of Bahrain",
      "The People's Republic of Bangladesh",
      "BD",
      "à¦¬à¦¾à¦‚à¦²à¦¾à¦¦à§‡à¦¶",
      "People's Republic of Bangladesh",
      "Bangla Desh",
      "East Pakistan",
      "BB",
      "The Republic of Belarus",
      "BY",
      "BielaruÅ›",
      "Ð‘ÐµÐ»Ð°Ñ€ÑƒÑÑŒ",
      "Republic of Belarusbelorussia",
      "Byelarus",
      "Byelorussia",
      "White Russia",
      "The Kingdom of Belgium",
      "BE",
      "Belguim",
      "BelgiÃ«",
      "Belgique",
      "Belgien",
      "Belgie",
      "Kingdom of Belgium",
      "BZ",
      "British Honduras",
      "The Republic of Benin",
      "BJ",
      "Republic of Benin",
      "Dahomey",
      "The Kingdom of Bhutan",
      "BT",
      "Druk Yul",
      "à½ à½–à¾²à½´à½‚à¼‹à½¡à½´à½£",
      "à¤­à¥‚à¤Ÿà¤¾à¤¨",
      "Kingdom of Bhutan",
      "The Plurinational State of Bolivia",
      "BO",
      "Buliwya",
      "Wuliwya",
      "VolÃ­via",
      "Plurinational State of Bolivia",
      "BA",
      "Bosna i Hercegovina",
      "Ð‘Ð¾ÑÐ½Ð° Ð¸ Ð¥ÐµÑ€Ñ†ÐµÐ³Ð¾Ð²Ð¸Ð½Ð°",
      "BiH",
      "Bosnia-Herzegovina",
      "Republic of Bosnia and Herzegovina",
      "The Republic of Botswana",
      "BW",
      "Republic of Botswana",
      "The Federative Republic of Brazil",
      "BR",
      "Brasil",
      "Federative Republic of Brazil",
      "Brunei Darussalam",
      "BN",
      "Ø¨Ø±ÙˆÙ†ÙŠ",
      "The Republic of Bulgaria",
      "BG",
      "Bugaria",
      "Bulagar",
      "Bulgariya",
      "BÄƒlgarija",
      "Ð‘ÑŠÐ»Ð³Ð°Ñ€Ð¸Ñ",
      "Republic of Bulgaria",
      "BF",
      "Burkina Fasoupper",
      "Volta",
      "The Republic of the Union of Myanmar",
      "MM",
      "Myanma",
      "á€™á€¼á€”á€ºá€™á€¬",
      "Republic of the Union of Myanmar",
      "Union of burma",
      "Myanmar",
      "The Republic of Burundi",
      "BI",
      "Republic of Burundi",
      "The Kingdom of Cambodia",
      "KH",
      "Kampuchea",
      "áž€áž˜áŸ’áž–áž»áž‡áž¶",
      "Kingdom of Cambodia",
      "The Republic of Cameroon",
      "CM",
      "Cameroun",
      "Republic of Cameroon",
      "CA",
      "Canadaigua",
      "Candada",
      "The Republic of Cabo Verde",
      "CV",
      "Cabo Verde",
      "Cabo",
      "Republic of Cabo Verde",
      "The Central African Republic",
      "CF",
      "RÃ©publique Centrafricaine",
      "KÃ¶dÃ¶rÃ¶sÃªse tÃ® BÃªafrÃ®ka",
      "Central Africa",
      "CAR",
      "The Republic of Chad",
      "TD",
      "Tchad",
      "TÅ¡Äd",
      "ØªØ´Ø§Ø¯",
      "ØªØ´Ø§Ø¯â€Ž",
      "Republic of Chad",
      "The Republic of Chile",
      "CL",
      "Republic of Chile",
      "The People's Republic of China",
      "CN",
      "ZhÅngguÃ³",
      "ä¸­å›½",
      "Zhongguo",
      "Zhonghua",
      "Peoples Republic",
      "ä¸­åŽ",
      "People's Republic of China",
      "Cathay",
      "Mainland china",
      "PRC",
      "Zhonghua Peoples Republic",
      "ä¸­å›½/ä¸­åŽ",
      "The Republic of Colombia",
      "CO",
      "Republic of Colombia",
      "The Union of the Comoros",
      "KM",
      "Komori",
      "Juzur al-Qamar",
      "Ø¬Ø²Ø± Ø§Ù„Ù‚Ù…Ø±",
      "Comores",
      "Ø¬Ø² Ø§Ù„Ù‚Ù…Ø±",
      "Union of the Comoros",
      "Federal Islamic Republic of the Comoros",
      "The Republic of the Congo",
      "CG",
      "RÃ©publique du Congo",
      "Republic of the Congo",
      "French Congo",
      "Brazzaville",
      "The Democratic Republic of the Congo",
      "CD",
      "RÃ©publique dÃ©mocratique du Congo",
      "Congo-Brazzaville",
      "Repubilika ya Kongo",
      "Democratic Republic of the Congo",
      "The Republic of Costa Rica",
      "CR",
      "Coasta Rica",
      "Costa Rico",
      "Republic of Costa Rica",
      "The Republic of Croatia",
      "HR",
      "Hrvatska",
      "Republic of Croatia",
      "The Republic of Cuba",
      "CU",
      "Republic of Cuba",
      "The Republic of Cyprus",
      "CY",
      "Kypros",
      "ÎšÏÏ€ÏÎ¿Ï‚",
      "KÄ±brÄ±s",
      "KÃ½pros",
      "Republic of Cyprus",
      "The Czech Republic",
      "CZ",
      "Czechoslav",
      "ÄŒeskÃ¡ republika",
      "ÄŒesko",
      "ÄŒeskÃ¡",
      "Ceska",
      "Czech Republic",
      "Czechoslovak Republic",
      "CS",
      "The Kingdom of Denmark",
      "DK",
      "Danmark",
      "Kingdom of Denmark",
      "The Republic of Djibouti",
      "DJ",
      "JÄ«bÅ«tÄ«",
      "Ø¬ÙŠØ¨ÙˆØªÙŠ",
      "Ø¬ÙŠØ¨ÙˆØªÙŠâ€Ž",
      "Jabuuti",
      "Gabuuti",
      "Republic of Djibouti",
      "The Commonwealth of Dominica",
      "DM",
      "Dominique",
      "Commonwealth of Dominica",
      "The Dominican Republic",
      "DO",
      "RepÃºblica Dominicana",
      "Germany Democratic Republic",
      "DD",
      "The Democratic Republic of Timor-Leste",
      "TL",
      "Timor Lorosa'e",
      "Timor-Leste",
      "Democratic Republic of Timor-Lestetimor",
      "The Republic of Ecuador",
      "EC",
      "Republic of Ecuador",
      "The Arab Republic of Egypt",
      "EG",
      "Egpyt",
      "Egyot",
      "Egyt",
      "Rgypt",
      "Misr",
      "Masr",
      "Ù…ØµØ±",
      "Arab Republic of Egypt",
      "United Arab Republic",
      "The Republic of El Salvador",
      "SV",
      "Republic of El Salvador",
      "Salvador",
      "The Republic of Equatorial Guinea",
      "GQ",
      "Guinea Ecuatorial",
      "Republic of Equatorial Guinea",
      "Spanish Guinea",
      "The State of Eritrea",
      "ER",
      "Iritriya",
      "Ø¥Ø±ØªØ±ÙŠØ§",
      "Ertra",
      "áŠ¤áˆ­á‰µáˆ«",
      "State of Eritrea",
      "The Republic of Estonia",
      "EE",
      "Eesti",
      "Republic of Estonia",
      "Esthonia",
      "The Federal Democratic Republic of Ethiopia",
      "ET",
      "Ethopi",
      "Ityop'ia",
      "áŠ¢á‰µá‹®áŒµá‹«",
      "Federal Democratic Republic of Ethiopia",
      "Abyssinia",
      "Yaltopya",
      "The Republic of Fiji",
      "FJ",
      "Viti",
      "à¤«à¤¼à¤¿à¤œà¥€",
      "Republic of Fiji",
      "The Republic of Finland",
      "FI",
      "Suomi",
      "Republic of Finland",
      "Aaland",
      "Ã…land",
      "The French Republic",
      "FR",
      "RÃ©publique FranÃ§aise",
      "French Republic",
      "RÃ©publique franÃ§aise",
      "The Gabonese Republic",
      "GA",
      "RÃ©publique gabonaise",
      "RÃ©publique Gabonaise",
      "Gabonese Republic",
      "Gabun",
      "GE",
      "Sak'art'velo",
      "áƒ¡áƒáƒ¥áƒáƒ áƒ—áƒ•áƒ”áƒšáƒ",
      "Sakartvelo",
      "The Federal Republic of Germany",
      "DE",
      "Deutschland",
      "Bundesrepublik",
      "Federal Republic of Germany",
      "FRG",
      "The Republic of Ghana",
      "GH",
      "Republic of Ghana",
      "Gold Coast",
      "The Hellenic Republic",
      "GR",
      "Hellas",
      "Î•Î»Î»Î¬Ï‚",
      "Ellada",
      "Î•Î»Î»Î¬Î´Î±",
      "Hellenic Republic",
      "Ellas",
      "GD",
      "The Republic of Guatemala",
      "GT",
      "Republic of Guatemala",
      "The Republic of Guinea",
      "GN",
      "GuinÃ©e",
      "Gine",
      "Republic of Guinea",
      "French Guinea",
      "The Republic of Guinea-Bissau",
      "GW",
      "Republic of Guinea-Bissau",
      "Portuguese Guinea",
      "The Co-operative Republic of Guyana",
      "GY",
      "Co-operative Republic of Guyana",
      "British Guiana",
      "The Republic of Haiti",
      "HT",
      "HaÃ¯ti",
      "Ayiti",
      "Republic of Haiti",
      "The Republic of Honduras",
      "HN",
      "Republic of Honduras",
      "HU",
      "MagyarorszÃ¡g",
      "Magyarorszag",
      "The Republic of Iceland",
      "IS",
      "Ãsland",
      "Island",
      "Republic of Iceland",
      "The Republic of India",
      "IN",
      "BharÃ´t",
      "à¦­à¦¾à§°à¦¤",
      "à¦­à¦¾à¦°à¦¤",
      "BhÄrat",
      "àª­àª¾àª°àª¤",
      "à¤­à¤¾à¤°à¤¤",
      "BhÄrata",
      "à²­à²¾à²°à²¤",
      "BhÄratam",
      "à´­à´¾à´°à´¤à´‚",
      "BharÃ´tÃ´",
      "à¬­à¬¾à¬°à¬¤",
      "à¨­à¨¾à¨°à¨¤",
      "à¤­à¤¾à¤°à¤¤à¤®à¥",
      "BÄrata",
      "à®ªà®¾à®°à®¤à®®à¯",
      "BhÄratadÄ“sam",
      "à°­à°¾à°°à°¤ à°¦à±‡à°¶à°‚",
      "à¤­à¤¾à¤°à¤¤ à¤—à¤£à¤°à¤¾à¤œà¥à¤¯",
      "Hindustan",
      "Republic of India",
      "Bharat",
      "The Republic of Indonesia",
      "ID",
      "Republic of Indonesia",
      "Dutch East Indies",
      "The Islamic Republic of Iran",
      "IR",
      "ÄªrÄn",
      "Ø§ÛŒØ±Ø§Ù†",
      "Islamic Republic of Iran",
      "Persia",
      "The Republic of Iraq",
      "IQ",
      "Al-'Iraq",
      "Ø§Ù„Ø¹Ø±Ø§Ù‚",
      "ÃŽraq",
      "â€Ž",
      "Republic of Iraq",
      "Al-Iraq",
      "Irak",
      "Ø§Ù„Ø¹Ø±Ø§Ù‚â€Ž",
      "IE",
      "Irelend",
      "Ã‰ire",
      "Eire",
      "Irish Republic",
      "Republic of Ireland",
      "The State of Israel",
      "IL",
      "Isreal",
      "Yisra'el",
      "×™×©×¨××œ",
      "IsraÊ¼iyl",
      "Ø¥Ø³Ø±Ø§Ø¦ÙŠÙ„",
      "State of Israel",
      "Sion",
      "Yisrael",
      "Zion",
      "Ø¥Ø³Ø±Ø§Ø¦ÙŠÙ„ ×™×©×¨××œ",
      "The Italian Republic",
      "IT",
      "Itlay",
      "Italia",
      "Italian Republic",
      "The Republic of Cote D'Ivoire",
      "CI",
      "Cote D'Ivoire",
      "Republic of Cote D'Ivoire",
      "Cote dIvoire",
      "JM",
      "Jamaca",
      "Jamacia",
      "Rastas",
      "Rastafari",
      "JP",
      "Nihon",
      "Nippon",
      "æ—¥æœ¬",
      "The Hashemite Kingdom of Jordan",
      "JO",
      "Al-â€™Urdun",
      "Ø§Ù„Ø£Ø±Ø¯Ù†",
      "Hashemite Kingdom of Jordan",
      "The Republic of Kazakhstan",
      "KZ",
      "Qazaqstan",
      "ÒšÐ°Ð·Ð°Ò›ÑÑ‚Ð°Ð½",
      "Ù‚Ø§Ø²Ø§Ù‚Ø³ØªØ§Ù†",
      "KazakhstÃ¡n",
      "ÐšÐ°Ð·Ð°Ñ…ÑÑ‚Ð°Ð½",
      "Republic of Kazakhstankazak",
      "Kazakh",
      "Kazakstan",
      "The Republic of Kenya",
      "KE",
      "Republic of Kenya",
      "The Republic of Kiribati",
      "KI",
      "Republic of Kiribati",
      "The Republic of Kosovo",
      "XK",
      "Kosova",
      "ÐšÐ¾ÑÐ¾Ð²Ð¾",
      "Republic of Kosovo",
      "The State of Kuwait",
      "KW",
      "Dawlat ul-Kuwayt",
      "Ø¯ÙˆÙ„Ø© Ø§Ù„ÙƒÙˆÙŠØª",
      "il-ikwet",
      "Ø§Ù„ÙƒÙˆÙŠØª",
      "State of Kuwait",
      "Koweit",
      "The Kyrgyz Republic",
      "KG",
      "ÐšÑ‹Ñ€Ð³Ñ‹Ð·ÑÑ‚Ð°Ð½",
      "Kirgizija",
      "ÐšÐ¸Ñ€Ð³Ð¸Ð·Ð¸Ñ",
      "Kyrgyz Republickirghiz",
      "Kirghizia",
      "Kirghizstan",
      "Kirgiz",
      "Kirgizia",
      "Kirgizstan",
      "Kyrgyz Republic",
      "The Lao People's Democratic Republic",
      "LA",
      "Lao",
      "àº›àº°à»€àº—àº”àº¥àº²àº§",
      "Lao People's Democratic Republic",
      "The Republic of Latvia",
      "LV",
      "Latvija",
      "Republic of Latvia",
      "Latvijaz",
      "The Lebanese Republic",
      "LB",
      "LubnÄn",
      "Ù„Ø¨Ù†Ø§Ù†",
      "Lebanese Republic",
      "The Kingdom of Lesotho",
      "LS",
      "Kingdom of Lesotho",
      "Basutoland",
      "The Republic of Liberia",
      "LR",
      "Republic of Liberia",
      "LY",
      "âµâµ‰â´±âµ¢â´°",
      "LÄ«biyÄ",
      "Ù„ÙŠØ¨ÙŠØ§",
      "Socialist People's Libyan Arab",
      "Jamahiriya",
      "The Principality of Liechtenstein",
      "LI",
      "Principality of Liechtenstein",
      "The Republic of Lithuania",
      "LT",
      "Lietuva",
      "Republic of Lithuanialietuva",
      "The Grand Duchy of Luxembourg",
      "LU",
      "Luxemborg",
      "LÃ«tzebuerg",
      "Luxemburg",
      "Grand Duchy of Luxembourg",
      "The Republic of Macedonia",
      "MK",
      "Makedonija",
      "ÐœÐ°ÐºÐµÐ´Ð¾Ð½Ð¸Ñ˜Ð°",
      "Republic of Macedonia",
      "Macedon",
      "The Republic of Madagascar",
      "MG",
      "Madagasikara",
      "Republic of Madagascar",
      "Malagasy Republic",
      "The Republic of Malawi",
      "MW",
      "Republic of Malawi",
      "Nyasaland",
      "MY",
      "Malyasi",
      "MÇŽlÃ¡ixÄ«yÃ ",
      "é©¬æ¥è¥¿äºš",
      "MalÄ“á¹£iyÄ",
      "à®®à®²à¯‡à®šà®¿à®¯à®¾",
      "Federation of Malaysia",
      "The Republic of Maldives",
      "MV",
      "Dhivehi Raajje",
      "Republic of Maldives",
      "The Republic of Mali",
      "ML",
      "Republic of Mali",
      "French Sudan",
      "The Republic of Malta",
      "MT",
      "Republic of Malta",
      "The Republic of the Marshall Islands",
      "MH",
      "AorÅkin MÌ§ajeÄ¼",
      "Republic of the Marshall Islands",
      "The Islamic Republic of Mauritania",
      "MR",
      "Muritan",
      "Agawec",
      "âµŽâµ“âµ”âµ‰âµœâ´°âµ",
      "â´°â´³â´°âµ¡âµ›",
      "MÅ«rÄ«tÄnyÄ",
      "Ù…ÙˆØ±ÙŠØªØ§Ù†ÙŠØ§",
      "Ø§Ù„Ù…ÙˆØ±ÙŠØªØ§Ù†ÙŠØ©",
      "Islamic Republic of Mauritania",
      "Mauritanie",
      "Muritaniya",
      "The Republic of Mauritius",
      "MU",
      "Maurice",
      "Moris",
      "Republic of Mauritius",
      "The United Mexican States",
      "MX",
      "Mexcio",
      "Mexixo",
      "MÃ©xico",
      "MÄ“xihco",
      "Mexicanos",
      "United Mexican States",
      "The Federated States of Micronesia",
      "FM",
      "Federated States of Micronesia",
      "The Republic of Moldova",
      "MD",
      "Republic of Moldova",
      "Moldavia",
      "The Principality of Monaco",
      "MC",
      "Principality of Monaco",
      "MN",
      "Mongol Uls",
      "ÐœÐ¾Ð½Ð³Ð¾Ð» Ð£Ð»Ñ",
      "á ®á ¤á ©á ­á ¤á ¯ á ¤á ¯á ¤á °",
      "MongÎ³ol Ulus",
      "ÐœÐ¾Ð½Ð³Ð¾Ð» ÑƒÐ»Ñ",
      "Outer Mongolia",
      "MongÎ³ol ulus",
      "ME",
      "Crna Gora",
      "Ð¦Ñ€Ð½Ð° Ð“Ð¾Ñ€Ð°",
      "The Kingdom of Morocco",
      "MA",
      "Amerruk",
      "ElmeÉ£rib",
      "â´°âµŽâµ”âµ”âµ“â´½",
      "âµâµŽâµ–âµ”âµ‰â´±",
      "Al-maÉ£rÃ©b",
      "Ø§Ù„Ù…ØºØ±Ø¨",
      "Kingdom of Moroccoal-Magrib",
      "Maroc",
      "Marruecos",
      "The Republic of Mozambique",
      "MZ",
      "MoÃ§ambique",
      "Republic of Mozambique",
      "Mocambique",
      "The Republic of Namibia",
      "NA",
      "NamibiÃ«",
      "Republic of Namibia",
      "South west africa",
      "The Republic of Nauru",
      "NR",
      "Naoero",
      "Republic of Nauru",
      "The Federal Democratic Republic of Nepal",
      "NP",
      "NepÄl",
      "à¤¨à¥‡à¤ªà¤¾à¤²",
      "Federal Democratic Republic of Nepal",
      "The Kingdom of the Netherlands",
      "NL",
      "Nederland",
      "NederlÃ¢n",
      "Holland",
      "Kingdom of the Netherlands",
      "NZ",
      "Zealnd",
      "Zeland",
      "Aotearoa",
      "The Republic of Nicaragua",
      "NI",
      "Republic of Nicaragua",
      "The Republic of Niger",
      "NE",
      "Nijar",
      "Republic of Niger",
      "The Federal Republic of Nigeria",
      "NG",
      "Nijeriya",
      "NaÃ­jÃ­rÃ­Ã ",
      "Federal Republic of Nigeria",
      "The Democratic People's Republic of Korea",
      "KP",
      "ì¡°ì„  / æœé®®",
      "BukchosÅn",
      "ë¶ì¡°ì„ ",
      "Democratic People's Republic of Koread",
      "PRK",
      "DPRK",
      "The Kingdom of Norway",
      "NO",
      "Norge",
      "Noreg",
      "Kingdom of Norway",
      "The Sultanate of Oman",
      "OM",
      "â€˜UmÄn",
      "Ø¹ÙÙ…Ø§Ù†",
      "Ø¹Ù…Ø§Ù†",
      "Sultanate of Oman",
      "Muscat and Oman",
      "The Islamic Republic of Pakistan",
      "PK",
      "Ù¾Ø§Ú©Ø³ØªØ§Ù†",
      "Islamic Republic of Pakistan",
      "West Pakistan",
      "The Republic of Palau",
      "PW",
      "Belau",
      "Republic of Palau",
      "Pelew",
      "The Republic of Panama",
      "PA",
      "PanamÃ¡",
      "Republic of Panama",
      "The Independent State of Papua New Guinea",
      "PG",
      "Papua Niugini",
      "Independent State of Papua New Guinea",
      "PNG",
      "The Republic of Paraguay",
      "PY",
      "ParaguÃ¡i",
      "Republic of Paraguay",
      "The Republic of Peru",
      "PE",
      "PerÃº",
      "Piruw",
      "Republic of Peru",
      "The Republic of the Philippines",
      "PH",
      "Phillippine",
      "Pilipinas",
      "Pinas",
      "Republic of the Philippines",
      "Philippine Islands",
      "The Republic of Poland",
      "PL",
      "Polska",
      "Republic of Poland",
      "The Portuguese Republic",
      "PT",
      "Portuguesa",
      "Portuguese Republic",
      "The State of Qatar",
      "QA",
      "Ù‚Ø·Ø±",
      "State of Qatar",
      "Katar",
      "Ztate of Katar",
      "RO",
      "Rumania",
      "Roumania",
      "RomÃ¢nia",
      "The Russian Federation",
      "RU",
      "Rossiya",
      "RossiÃ¢",
      "Ð Ð¾ÑÑÐ¸Ñ1",
      "Ð Ð¾ÑÑÐ¸Ð¹ÑÐºÐ°Ñ",
      "Ð Ð¾ÑÑÐ¸Ñ",
      "Russian Federation",
      "The Republic of Rwanda",
      "RW",
      "Republic of Rwandaruanda",
      "Rwandese Republic",
      "The Independent State of Samoa",
      "WS",
      "Samo",
      "Amerika SÄmoa",
      "Independent State of Samoa",
      "Samoa i Sisifo",
      "Western samoa",
      "The Republic of San Marino",
      "SM",
      "RSM",
      "Republic of San Marino",
      "Repubblica",
      "The Democratic Republic of Sao Tome and Principe",
      "ST",
      "SÃ£o TomÃ© e PrÃ­ncipe",
      "Democratic Republic of Sao Tome and Principe",
      "Sao Thome e Principe",
      "Sao Tome e Principe",
      "St. Thomas and Principe",
      "The Kingdom of Saudi Arabia",
      "SA",
      "Al-Mamlaka Al-â€˜Arabiyyah as Saâ€˜Å«diyyah",
      "Ø§Ù„Ù…Ù…Ù„ÙƒØ© Ø§Ù„Ø¹Ø±Ø¨ÙŠØ© Ø§Ù„Ø³Ø¹ÙˆØ¯ÙŠØ©",
      "Ø§Ù„Ø³Ø¹ÙˆØ¯ÙŠØ©",
      "Kingdom of Saudi Arabia",
      "The Republic of Senegal",
      "SN",
      "SÃ©nÃ©gal",
      "Republic of Senegal",
      "The Republic of Serbia",
      "RS",
      "Srbija",
      "Ð¡Ñ€Ð±Ð¸Ñ˜Ð°",
      "Republic of Serbia",
      "Ð¡Ñ€Ð±Ð¸Ñ˜Ð° Srbija",
      "The Republic of Seychelles",
      "SC",
      "Sesel",
      "Republic of Seychelles",
      "The Republic of Sierra Leone",
      "SL",
      "Republic of Sierra Leone",
      "The Republic of Singapore",
      "SG",
      "Singapura",
      "XÄ«njiÄpÅ",
      "æ–°åŠ å¡",
      "Singapur",
      "à®šà®¿à®™à¯à®•à®ªà¯à®ªà¯‚à®°à¯",
      "à®šà®¿à®™à¯à®•à®ªà¯à®ªà¯‚à®°à¯à®•à¯",
      "à®Ÿà®¿à®¯à®°à®šà¯",
      "æ–°åŠ å¡å…±å’Œå›½",
      "Republic of Singapore",
      "à®šà®¿à®™à¯à®•à®ªà¯à®ªà¯‚à®°à¯ à®•à¯à®Ÿà®¿à®¯à®°à®šà¯",
      "The Slovak Republic",
      "SK",
      "Slovensko",
      "SlovenskÃ¡",
      "Slovak Republic",
      "The Republic of Slovenia",
      "SI",
      "Slovenija",
      "Republic of Slovenia",
      "SB",
      "Solomon Aelan",
      "Solomons",
      "Federal Republic of Somalia",
      "SO",
      "Soomaaliya",
      "aÅŸ-ÅžÅ«mÄl",
      "Ø§Ù„ØµÙˆÙ…Ø§Ù„",
      "Federal Republic of Somaliaaiai",
      "Al-itihaad al-islamiya",
      "Al itihaad al islamiya",
      "The Republic of South Africa",
      "ZA",
      "Suid-Afrika",
      "iNingizimu Afrika",
      "uMzantsi Afrika",
      "Afrika-Borwa",
      "Afrika Borwa",
      "Aforika Borwa",
      "Afurika Tshipembe",
      "Afrika Dzonga",
      "iSewula Afrika",
      "RSA",
      "Republic of South Africa",
      "The Republic of Korea",
      "KR",
      "Hanguk",
      "í•œêµ­ / éŸ“åœ‹",
      "Namhan",
      "ë‚¨í•œ",
      "Republic of Korea",
      "The Republic of South Sudan",
      "SS",
      "Republic of South Sudan",
      "Ø§Ù„Ø³ÙˆØ¯Ø§Ù†",
      "The Kingdom of Spain",
      "ES",
      "EspaÃ±a",
      "Espanya",
      "Espainia",
      "Espanha",
      "Kingdom of Spain",
      "The Democratic Socialist Republic of Sri Lanka",
      "LK",
      "Sri LankÄ",
      "à·à·Šâ€à¶»à·“ à¶½à¶‚à¶šà·à·€",
      "à®‡à®²à®™à¯à®•à¯ˆ",
      "à·à·Šâ€à¶»à·“ à¶½à¶‚à¶šà·",
      "Ceylon",
      "Democratic Socialist Republic of Sri Lanka",
      "à·à·Šâ€à¶»à·“ à¶½à¶‚à¶šà· à®‡à®²à®™à¯à®•à¯ˆ",
      "The Federation of Saint Christopher and Nevis",
      "KN",
      "Federation of Saint Christopher and Nevis",
      "St. Kitts and Nevis",
      "Saint Lucia",
      "LC",
      "St. Lucia",
      "Saint Vincent and the Grenadines",
      "VC",
      "St. Vincent",
      "The Republic of the Sudan",
      "SD",
      "As-Sudan",
      "Republic of the Sudan",
      "Soudan",
      "The Republic of Suriname",
      "SR",
      "à¤¶à¤°à¥à¤¨à¤®à¥",
      "Sarnam",
      "Sranangron",
      "Republic of Suriname",
      "Sarnam Sranangron",
      "The Kingdom of Swaziland",
      "SZ",
      "Umbuso weSwatini",
      "kaNgwane",
      "Eswatini",
      "weSwatini",
      "Swatini",
      "Ngwane",
      "Kingdom of Swaziland",
      "Kingdom of Eswatini",
      "weSwatini Swatini Ngwane",
      "The Kingdom of Sweden",
      "SE",
      "Sverige",
      "Kingdom of Sweden",
      "The Swiss Confederation",
      "CH",
      "Switerland",
      "Schweiz",
      "Suisse",
      "Svizzera",
      "Svizra",
      "Swiss Confederation",
      "The Syrian Arab Republic",
      "SY",
      "Suriyah",
      "Ø³ÙˆØ±ÙŠØ©",
      "Syrian Arab Republic",
      "The Republic of Tajikistan",
      "TJ",
      "Tojikistan",
      "Ð¢Ð¾Ò·Ð¸ÐºÐ¸ÑÑ‚Ð¾Ð½",
      "ToÃ§ikiston",
      "Republic of Tajikistantadjik",
      "Tadzhik",
      "Tadzhikistan",
      "Tajik",
      "The United Republic of Tanzania",
      "TZ",
      "United Republic of Tanzania",
      "The Kingdom of Thailand",
      "TH",
      "Mueang Thai",
      "Prathet Thai",
      "Ratcha-anachak Thai",
      "à¹€à¸¡à¸·à¸­à¸‡à¹„à¸—à¸¢",
      "à¸›à¸£à¸°à¹€à¸—à¸¨à¹„à¸—à¸¢",
      "à¸£à¸²à¸Šà¸­à¸²à¸“à¸²à¸ˆà¸±à¸à¸£à¹„à¸—à¸¢",
      "Kingdom of Thailand",
      "Siam",
      "The Commonwealth of The Bahamas",
      "BS",
      "Commonwealth of Bahamas",
      "The Republic of The Gambia",
      "GM",
      "Islamic Republic of Gambia",
      "The Togolese Republic",
      "TG",
      "Togolese",
      "Togolese Republic",
      "The Kingdom of Tonga",
      "TO",
      "Kingdom of Tonga",
      "Friendly islands",
      "The Republic of Trinidad and Tobago",
      "TT",
      "Republic of Trinidad and Tobago",
      "The Tunisian Republic",
      "TN",
      "Tunes",
      "âµœâµ“âµâµ™",
      "TÅ«ns",
      "ØªÙˆÙ†Ø³",
      "Tunisian Republic",
      "The Republic of Turkey",
      "TR",
      "TÃ¼rkiye",
      "Turkiye",
      "Republic of Turkey",
      "TM",
      "TÃ¼rkmenistan",
      "Turkmen",
      "Turkmenia",
      "Turkomen",
      "TV",
      "JÃ¨rri",
      "Ellice Islands",
      "The Republic of Uganda",
      "UG",
      "Republic of Uganda",
      "UA",
      "UkraÑ—na",
      "Ð£ÐºÑ€Ð°Ñ—Ð½Ð°",
      "Ukrayina",
      "The United Arab Emirates",
      "AE",
      "arab emir ates",
      "arab emirates",
      "Al-â€™ImÄrat Al-â€˜Arabiyyah Al-Muttaá¸¥idah",
      "Ø§Ù„Ø¥Ù…Ø§Ø±Ø§Øª Ø§Ù„Ø¹Ø±Ø¨ÙŠÙ‘Ø© Ø§Ù„Ù…ØªÙ‘Ø­Ø¯Ø©",
      "Ø§Ù„Ø¥Ù…Ø§Ø±Ø§Øª",
      "UAE",
      "The United Kingdom of Great Britain and Northern Ireland",
      "GB",
      "Bitain",
      "Briain",
      "Britiain",
      "Brtain",
      "Englsnd",
      "Grat Britain",
      "Great Britan",
      "Gret Britain",
      "Scottland",
      "Y Deyrnas Unedig",
      "Unitit Kinrick",
      "RÃ¬oghachd Aonaichte",
      "RÃ­ocht Aontaithe",
      "An Rywvaneth Unys",
      "UK",
      "United Kingdom of Great Britain and Northern Ireland",
      "Britain",
      "U.K.",
      "The United States of America",
      "US",
      "Ameeri",
      "Ameica",
      "Amerca",
      "Amercia",
      "Ameria",
      "Amrica",
      "Anmerica",
      "Unit States",
      "Unite States",
      "United Sat",
      "United Staes",
      "United Stated",
      "United Stats",
      "United Sttes",
      "Unites States",
      "Untied State",
      "americia",
      "Estados Unidos",
      "Ã‰tats-Unis",
      "Amelika-hui-pu-'ia",
      "USA",
      "United States of America",
      "The States",
      "U.S.",
      "U.S.A.",
      "The Oriental Republic of Uruguay",
      "UY",
      "RepÃºblica Oriental del Uruguay",
      "Oriental Republic of Uruguay",
      "Union of Soviet Socialist Republics",
      "SU",
      "Ð¡Ð¾ÑŽÐ· Ð¡Ð¾Ð²ÐµÑ‚ÑÐºÐ¸Ñ… Ð¡Ð¾Ñ†Ð¸Ð°Ð»Ð¸ÑÑ‚Ð¸Ñ‡ÐµÑÐºÐ¸Ñ… Ð ÐµÑÐ¿ÑƒÐ±Ð»Ð¸Ðº",
      "The Republic of Uzbekistan",
      "UZ",
      "Oâ€˜zbekiston",
      "ÐŽÐ·Ð±ÐµÐºÐ¸ÑÑ‚Ð¾Ð½",
      "O'zbekstan",
      "Republic of Uzbekistan",
      "Uzbek",
      "Oâ€™zbekstan",
      "The Republic of Vanuatu",
      "VU",
      "Republic of Vanuatu",
      "New Hebrides",
      "Vatican City State",
      "VA",
      "E Civitate Vaticana",
      "Holy See",
      "Citta del Vaticano",
      "The Bolivarian Republic of Venezuela",
      "VE",
      "Venezula",
      "Bolivarian Republic of Venezuela",
      "The Socialist Republic of Vietnam",
      "VN",
      "Veitnam",
      "Vietman",
      "Viá»‡t Nam",
      "Socialist Republic of Vietnam",
      "Annam",
      "The Republic of Yemen",
      "YE",
      "Al-Yaman",
      "Ø§Ù„ÙŠÙ…Ù†",
      "Republic of Yemen",
      "Socialist Federal Republic of Yugoslavia",
      "YU",
      "Yugosav",
      "Jugoslavija",
      "The Republic of Zambia",
      "ZM",
      "Republic of Zambia",
      "Northern Rhodesia",
      "The Republic of Zimbabwe",
      "ZW",
      "Republic of Zimbabwe",
      "Rhodesia",
      "AX",
      "Ahvenanmaa",
      "Aland",
      "AI",
      "AQ",
      "AW",
      "Bailiwick of Guernsey",
      "GG",
      "Island of Guernsey",
      "Bailiwick of Jersey",
      "JE",
      "Island of Jersey",
      "BM",
      "Bermudas",
      "BQ-BO",
      "KY",
      "ES-CE",
      "Collectivity of Saint Martin",
      "MF",
      "Sint Maarten",
      "Commonwealth of Puerto Rico",
      "PR",
      "Porto Rico",
      "Puarto Rico",
      "Commonwealth of the Northern Mariana Islands",
      "MP",
      "Northern Marianas",
      "CK",
      "Country of CuraÃ§ao",
      "CW",
      "KÃ²rsou",
      "Curacao",
      "Emirate of Abu Dhabi",
      "AE-AZ",
      "Emirate of Ajman",
      "AE-AJ",
      "Emirate of Dubai",
      "AE-DU",
      "Emirate of Fujairah",
      "AE-FU",
      "Emirate of Ras al-Khaimah",
      "AE-RK",
      "Emirate of Sharjah",
      "AE-SH",
      "Emirate of Umm al-Quwain",
      "AE-UQ",
      "FK",
      "Las Malvinas",
      "FO",
      "FÃ¸royar",
      "FÃ¦rÃ¸erne",
      "Aeroes",
      "Faroes",
      "GF",
      "Guyane",
      "PF",
      "PolynÃ©sie franÃ§aise",
      "PolynÃ©sie FranÃ§aise",
      "French Oceania",
      "GI",
      "GL",
      "Kalaallit Nunaat",
      "GrÃ¸nland",
      "Gronland",
      "GP",
      "Hong Kong Special Administrative Region",
      "HK",
      "Heung Gong",
      "é¦™æ¸¯",
      "IM",
      "Ellan Vannin",
      "Macao Special Administrative Region",
      "MO",
      "MQ",
      "YT",
      "ES-ML",
      "MS",
      "NC",
      "Nouvelle-CalÃ©donie",
      "NU",
      "NiuÄ“",
      "PN",
      "Pitcairn",
      "Henderson",
      "Ducie and Oeno Islands",
      "RE",
      "Reunion",
      "BQ-SA",
      "BL",
      "St. Barthelemy",
      "St Barth",
      "SH-HL",
      "PM",
      "Saint-Pierre et Miquelon",
      "BQ-SE",
      "SX",
      "SJ",
      "TW",
      "ZhÅnghuÃ¡ MÃ­nguÃ³",
      "TÃ¡iwÄn",
      "ä¸­è¯æ°‘åœ‹",
      "è‡ºç£/å°ç£",
      "å°ç£",
      "è‡ºç£",
      "Chinese Taipei",
      "Territory of American Samoa",
      "AS",
      "Eastern Samoa",
      "Territory of Christmas Island",
      "CX",
      "Territory of Guam",
      "GU",
      "GuÃ¥hÃ¥n",
      "Territory of Norfolk Island",
      "NF",
      "Territory of the Cocos (Keeling) Islands",
      "CC",
      "Territory of the Wallis and Futuna Islands",
      "WF",
      "Wallis-et-Futuna",
      "Uvea mo Futuna",
      "The British Indian Ocean Territory",
      "IO",
      "I.O.T.",
      "IOT",
      "The Occupied Palestinian Territories",
      "PS",
      "ÙÙ„Ø³Ø·ÙŠÙ†",
      "The Virgin Islands",
      "VG",
      "Virgina Islands",
      "Virgin Islands",
      "BVI",
      "B.V.I.",
      "TK",
      "SH-TA",
      "TC",
      "Virgin Islands of the United States",
      "VI",
      "American Virgin Islands",
      "EH",
      "Ù„ØµØ­Ø±Ø§Ø¡ Ø§Ù„ØºØ±Ø¨ÙŠØ©",
      "GBN",
      "NIR",
      "WLS",
      "SCT",
      "ENG",
      "BAT",
      "Ascension Island",
      "SH-AC",
      "UM-81",
      "BV",
      "TF",
      "UM-84",
      "UM-86",
      "UM-89",
      "UM-67",
      "UM-71",
      "UM-76",
      "UM-95",
      "South Georgia and the South Sandwich Islands",
      "GS",
      "Sovereign Base Areas of Akrotiri and Dhekelia",
      "XQZ",
      "XXD",
      "Territory of Heard Island and McDonald Islands",
      "HM",
      "Atlantis",
      "Principality of Dorne",
    ],
    "queryTokenizer": [Function],
  },
]
`;

exports[`createSuggestionEngine passes custom synonyms to Engine 1`] = `
Array [
  Object {
    "datumTokenizer": [Function],
    "local": Array [
      "Portugal",
      "Palau",
      "Paraguay",
      "Qatar",
      "Andorra",
      "United Arab Emirates",
      "Afghanistan",
      "Antigua and Barbuda",
      "Albania",
      "Armenia",
      "Angola",
      "Argentina",
      "Austria",
      "Australia",
      "Azerbaijan",
      "Romania",
      "Bosnia and Herzegovina",
      "Barbados",
      "Serbia",
      "Bangladesh",
      "Russia",
      "Belgium",
      "Burkina Faso",
      "Rwanda",
      "Bulgaria",
      "Bahrain",
      "Burundi",
      "Benin",
      "Brunei",
      "Bolivia",
      "Saudi Arabia",
      "Solomon Islands",
      "Seychelles",
      "Brazil",
      "The Bahamas",
      "Sudan",
      "Sweden",
      "Bhutan",
      "Singapore",
      "Botswana",
      "Slovenia",
      "Belarus",
      "Slovakia",
      "Belize",
      "Sierra Leone",
      "San Marino",
      "Senegal",
      "Somalia",
      "Canada",
      "Suriname",
      "South Sudan",
      "Sao Tome and Principe",
      "Congo (Democratic Republic)",
      "USSR",
      "El Salvador",
      "Central African Republic",
      "Congo",
      "Switzerland",
      "Syria",
      "Ivory Coast",
      "Swaziland",
      "Chile",
      "Cameroon",
      "China",
      "Colombia",
      "Costa Rica",
      "Chad",
      "Czechoslovakia",
      "Cuba",
      "Togo",
      "Cape Verde",
      "Thailand",
      "Tajikistan",
      "Cyprus",
      "Czechia",
      "East Timor",
      "Turkmenistan",
      "Tunisia",
      "Tonga",
      "Turkey",
      "Trinidad and Tobago",
      "East Germany",
      "Germany",
      "Tuvalu",
      "Tanzania",
      "Djibouti",
      "Denmark",
      "Dominica",
      "Dominican Republic",
      "Ukraine",
      "Uganda",
      "Algeria",
      "United States",
      "Ecuador",
      "Estonia",
      "Egypt",
      "Uruguay",
      "Uzbekistan",
      "Vatican City",
      "St Vincent",
      "Eritrea",
      "Spain",
      "Venezuela",
      "Ethiopia",
      "Vietnam",
      "Vanuatu",
      "Finland",
      "Fiji",
      "Micronesia",
      "France",
      "Gabon",
      "United Kingdom",
      "Samoa",
      "Grenada",
      "Georgia",
      "Ghana",
      "The Gambia",
      "Guinea",
      "Equatorial Guinea",
      "Greece",
      "Guatemala",
      "Guinea-Bissau",
      "Guyana",
      "Kosovo",
      "Honduras",
      "Croatia",
      "Yemen",
      "Haiti",
      "Hungary",
      "Indonesia",
      "Ireland",
      "Yugoslavia",
      "Israel",
      "India",
      "South Africa",
      "Iraq",
      "Iran",
      "Iceland",
      "Italy",
      "Zambia",
      "Zimbabwe",
      "Jamaica",
      "Jordan",
      "Japan",
      "Kenya",
      "Kyrgyzstan",
      "Cambodia",
      "Kiribati",
      "Comoros",
      "St Kitts and Nevis",
      "North Korea",
      "South Korea",
      "Kuwait",
      "Kazakhstan",
      "Laos",
      "Lebanon",
      "St Lucia",
      "Liechtenstein",
      "Sri Lanka",
      "Liberia",
      "Lesotho",
      "Lithuania",
      "Luxembourg",
      "Latvia",
      "Libya",
      "Morocco",
      "Monaco",
      "Moldova",
      "Montenegro",
      "Madagascar",
      "Marshall Islands",
      "Macedonia",
      "Mali",
      "Burma",
      "Mongolia",
      "Mauritania",
      "Malta",
      "Mauritius",
      "Maldives",
      "Malawi",
      "Mexico",
      "Malaysia",
      "Mozambique",
      "Namibia",
      "Niger",
      "Nigeria",
      "Nicaragua",
      "Netherlands",
      "Norway",
      "Nepal",
      "Nauru",
      "New Zealand",
      "Oman",
      "Panama",
      "Peru",
      "Papua New Guinea",
      "Philippines",
      "Pakistan",
      "Poland",
      "Howland Island",
      "Akrotiri",
      "Puerto Rico",
      "Jarvis Island",
      "Taiwan",
      "Occupied Palestinian Territories",
      "Hong Kong",
      "Heard Island and McDonald Islands",
      "Kingman Reef",
      "Ceuta",
      "Saint-Martin (French part)",
      "Mayotte",
      "Baker Island",
      "Palmyra Atoll",
      "Macao",
      "Western Sahara",
      "Northern Mariana Islands",
      "Martinique",
      "Isle of Man",
      "Montserrat",
      "British Indian Ocean Territory",
      "Anguilla",
      "Ascension",
      "Sharjah",
      "Fujairah",
      "Antarctica",
      "British Virgin Islands",
      "American Samoa",
      "United States Virgin Islands",
      "RÃ©union",
      "New Caledonia",
      "Ras al-Khaimah",
      "Aruba",
      "Abu Dhabi",
      "Ã…land Islands",
      "Norfolk Island",
      "Jersey",
      "Falkland Islands",
      "Dhekelia",
      "Ajman",
      "Niue",
      "Johnston Atoll",
      "Faroe Islands",
      "Saint BarthÃ©lemy",
      "Saba",
      "Bermuda",
      "Bonaire",
      "Wallis and Futuna",
      "Saint Helena",
      "Umm al-Quwain",
      "Bouvet Island",
      "Tristan da Cunha",
      "Svalbard and Jan Mayen",
      "Sint Eustatius",
      "French Guiana",
      "Guernsey",
      "Cocos (Keeling) Islands",
      "Gibraltar",
      "Sint Maarten (Dutch part)",
      "Navassa Island",
      "Greenland",
      "Wake Island",
      "Cook Islands",
      "Guadeloupe",
      "South Georgia and South Sandwich Islands",
      "Melilla",
      "Guam",
      "Dubai",
      "Cayman Islands",
      "Turks and Caicos Islands",
      "French Southern Territories",
      "CuraÃ§ao",
      "Christmas Island",
      "British Antarctic Territory",
      "French Polynesia",
      "Tokelau",
      "Saint Pierre and Miquelon",
      "Pitcairn, Henderson, Ducie and Oeno Islands",
      "Midway Islands",
      "Great Britain",
      "Scotland",
      "Northern Ireland",
      "Wales",
      "England",
      "The Islamic Republic of Afghanistan",
      "AF",
      "afganistan",
      "afganastan",
      "afganestan",
      "afganhistan",
      "afghanistan",
      "afghanlstan",
      "afghistan",
      "Afghanestan",
      "Ø§ÙØºØ§Ù†Ø³ØªØ§Ù†",
      "Islamic Republic of Afghanistan",
      "The Republic of Albania",
      "AL",
      "alabnia",
      "albana",
      "albania",
      "albanian",
      "albanija",
      "albenia",
      "albiana",
      "alibania",
      "ShqipÃ«ria",
      "Republic of Albania",
      "The People's Democratic Republic of Algeria",
      "DZ",
      "aigeria",
      "alegeria",
      "algeir",
      "algeirs",
      "algeria",
      "algers",
      "algieria",
      "algiers",
      "Dzayer",
      "â´·âµ£â´°âµ¢â´»âµ”",
      "Al-JazÄ'ir",
      "Ø§Ù„Ø¬Ø²Ø§Ø¦Ø±",
      "People's Democratic Republic of Algeriaalgerie",
      "The Principality of Andorra",
      "AD",
      "Principality of Andorra",
      "The Republic of Angola",
      "AO",
      "angolo",
      "Republic of Angola",
      "AG",
      "The Argentine Republic",
      "AR",
      "Argenina",
      "Argentinia",
      "argentiha",
      "argentina",
      "argentine",
      "argentna",
      "Argentine Republic",
      "Genus Argentina",
      "The Republic of Armenia",
      "AM",
      "arima",
      "armenia",
      "arminia",
      "HayastÃ¡n",
      "Õ€Õ¡ÕµÕ¡Õ½Õ¿Õ¡Õ¶",
      "Republic of Armenia",
      "Hayastan",
      "The Commonwealth of Australia",
      "AU",
      "autralia",
      "ausralia",
      "austalia",
      "austraila",
      "austrailia",
      "australa",
      "australla",
      "austrilia",
      "austrlia",
      "avstralia",
      "avstria",
      "Commonwealth of Australia",
      "The Republic of Austria",
      "AT",
      "Ã–sterreich",
      "Osterreich",
      "Oesterreich",
      "Republic of Austria",
      "The Republic of Azerbaijan",
      "AZ",
      "azebaijan",
      "azeraijan",
      "azerbaijan",
      "azerbaijann",
      "azerbaisan",
      "azerbaizan",
      "azerbajan",
      "azerbaycan",
      "azerbayjan",
      "azerbeyjan",
      "azerbpijan",
      "AzÉ™rbaycan",
      "Republic of Azerbaijan",
      "Azerbaijani Republic",
      "Azerbajdzhan",
      "Azerbajdzhan Republic",
      "The Kingdom of Bahrain",
      "BH",
      "Al-Baá¸¥rayn",
      "Ø§Ù„Ø¨Ø­Ø±ÙŠÙ†",
      "Kingdom of Bahrain",
      "State of Bahrain",
      "The People's Republic of Bangladesh",
      "BD",
      "à¦¬à¦¾à¦‚à¦²à¦¾à¦¦à§‡à¦¶",
      "People's Republic of Bangladesh",
      "Bangla Desh",
      "East Pakistan",
      "BB",
      "The Republic of Belarus",
      "BY",
      "BielaruÅ›",
      "Ð‘ÐµÐ»Ð°Ñ€ÑƒÑÑŒ",
      "Republic of Belarusbelorussia",
      "Byelarus",
      "Byelorussia",
      "White Russia",
      "The Kingdom of Belgium",
      "BE",
      "Belguim",
      "BelgiÃ«",
      "Belgique",
      "Belgien",
      "Belgie",
      "Kingdom of Belgium",
      "BZ",
      "British Honduras",
      "The Republic of Benin",
      "BJ",
      "Republic of Benin",
      "Dahomey",
      "The Kingdom of Bhutan",
      "BT",
      "Druk Yul",
      "à½ à½–à¾²à½´à½‚à¼‹à½¡à½´à½£",
      "à¤­à¥‚à¤Ÿà¤¾à¤¨",
      "Kingdom of Bhutan",
      "The Plurinational State of Bolivia",
      "BO",
      "Buliwya",
      "Wuliwya",
      "VolÃ­via",
      "Plurinational State of Bolivia",
      "BA",
      "Bosna i Hercegovina",
      "Ð‘Ð¾ÑÐ½Ð° Ð¸ Ð¥ÐµÑ€Ñ†ÐµÐ³Ð¾Ð²Ð¸Ð½Ð°",
      "BiH",
      "Bosnia-Herzegovina",
      "Republic of Bosnia and Herzegovina",
      "The Republic of Botswana",
      "BW",
      "Republic of Botswana",
      "The Federative Republic of Brazil",
      "BR",
      "Brasil",
      "Federative Republic of Brazil",
      "Brunei Darussalam",
      "BN",
      "Ø¨Ø±ÙˆÙ†ÙŠ",
      "The Republic of Bulgaria",
      "BG",
      "Bugaria",
      "Bulagar",
      "Bulgariya",
      "BÄƒlgarija",
      "Ð‘ÑŠÐ»Ð³Ð°Ñ€Ð¸Ñ",
      "Republic of Bulgaria",
      "BF",
      "Burkina Fasoupper",
      "Volta",
      "The Republic of the Union of Myanmar",
      "MM",
      "Myanma",
      "á€™á€¼á€”á€ºá€™á€¬",
      "Republic of the Union of Myanmar",
      "Union of burma",
      "Myanmar",
      "The Republic of Burundi",
      "BI",
      "Republic of Burundi",
      "The Kingdom of Cambodia",
      "KH",
      "Kampuchea",
      "áž€áž˜áŸ’áž–áž»áž‡áž¶",
      "Kingdom of Cambodia",
      "The Republic of Cameroon",
      "CM",
      "Cameroun",
      "Republic of Cameroon",
      "CA",
      "Canadaigua",
      "Candada",
      "The Republic of Cabo Verde",
      "CV",
      "Cabo Verde",
      "Cabo",
      "Republic of Cabo Verde",
      "The Central African Republic",
      "CF",
      "RÃ©publique Centrafricaine",
      "KÃ¶dÃ¶rÃ¶sÃªse tÃ® BÃªafrÃ®ka",
      "Central Africa",
      "CAR",
      "The Republic of Chad",
      "TD",
      "Tchad",
      "TÅ¡Äd",
      "ØªØ´Ø§Ø¯",
      "ØªØ´Ø§Ø¯â€Ž",
      "Republic of Chad",
      "The Republic of Chile",
      "CL",
      "Republic of Chile",
      "The People's Republic of China",
      "CN",
      "ZhÅngguÃ³",
      "ä¸­å›½",
      "Zhongguo",
      "Zhonghua",
      "Peoples Republic",
      "ä¸­åŽ",
      "People's Republic of China",
      "Cathay",
      "Mainland china",
      "PRC",
      "Zhonghua Peoples Republic",
      "ä¸­å›½/ä¸­åŽ",
      "The Republic of Colombia",
      "CO",
      "Republic of Colombia",
      "The Union of the Comoros",
      "KM",
      "Komori",
      "Juzur al-Qamar",
      "Ø¬Ø²Ø± Ø§Ù„Ù‚Ù…Ø±",
      "Comores",
      "Ø¬Ø² Ø§Ù„Ù‚Ù…Ø±",
      "Union of the Comoros",
      "Federal Islamic Republic of the Comoros",
      "The Republic of the Congo",
      "CG",
      "RÃ©publique du Congo",
      "Republic of the Congo",
      "French Congo",
      "Brazzaville",
      "The Democratic Republic of the Congo",
      "CD",
      "RÃ©publique dÃ©mocratique du Congo",
      "Congo-Brazzaville",
      "Repubilika ya Kongo",
      "Democratic Republic of the Congo",
      "The Republic of Costa Rica",
      "CR",
      "Coasta Rica",
      "Costa Rico",
      "Republic of Costa Rica",
      "The Republic of Croatia",
      "HR",
      "Hrvatska",
      "Republic of Croatia",
      "The Republic of Cuba",
      "CU",
      "Republic of Cuba",
      "The Republic of Cyprus",
      "CY",
      "Kypros",
      "ÎšÏÏ€ÏÎ¿Ï‚",
      "KÄ±brÄ±s",
      "KÃ½pros",
      "Republic of Cyprus",
      "The Czech Republic",
      "CZ",
      "Czechoslav",
      "ÄŒeskÃ¡ republika",
      "ÄŒesko",
      "ÄŒeskÃ¡",
      "Ceska",
      "Czech Republic",
      "Czechoslovak Republic",
      "CS",
      "The Kingdom of Denmark",
      "DK",
      "Danmark",
      "Kingdom of Denmark",
      "The Republic of Djibouti",
      "DJ",
      "JÄ«bÅ«tÄ«",
      "Ø¬ÙŠØ¨ÙˆØªÙŠ",
      "Ø¬ÙŠØ¨ÙˆØªÙŠâ€Ž",
      "Jabuuti",
      "Gabuuti",
      "Republic of Djibouti",
      "The Commonwealth of Dominica",
      "DM",
      "Dominique",
      "Commonwealth of Dominica",
      "The Dominican Republic",
      "DO",
      "RepÃºblica Dominicana",
      "Germany Democratic Republic",
      "DD",
      "The Democratic Republic of Timor-Leste",
      "TL",
      "Timor Lorosa'e",
      "Timor-Leste",
      "Democratic Republic of Timor-Lestetimor",
      "The Republic of Ecuador",
      "EC",
      "Republic of Ecuador",
      "The Arab Republic of Egypt",
      "EG",
      "Egpyt",
      "Egyot",
      "Egyt",
      "Rgypt",
      "Misr",
      "Masr",
      "Ù…ØµØ±",
      "Arab Republic of Egypt",
      "United Arab Republic",
      "The Republic of El Salvador",
      "SV",
      "Republic of El Salvador",
      "Salvador",
      "The Republic of Equatorial Guinea",
      "GQ",
      "Guinea Ecuatorial",
      "Republic of Equatorial Guinea",
      "Spanish Guinea",
      "The State of Eritrea",
      "ER",
      "Iritriya",
      "Ø¥Ø±ØªØ±ÙŠØ§",
      "Ertra",
      "áŠ¤áˆ­á‰µáˆ«",
      "State of Eritrea",
      "The Republic of Estonia",
      "EE",
      "Eesti",
      "Republic of Estonia",
      "Esthonia",
      "The Federal Democratic Republic of Ethiopia",
      "ET",
      "Ethopi",
      "Ityop'ia",
      "áŠ¢á‰µá‹®áŒµá‹«",
      "Federal Democratic Republic of Ethiopia",
      "Abyssinia",
      "Yaltopya",
      "The Republic of Fiji",
      "FJ",
      "Viti",
      "à¤«à¤¼à¤¿à¤œà¥€",
      "Republic of Fiji",
      "The Republic of Finland",
      "FI",
      "Suomi",
      "Republic of Finland",
      "Aaland",
      "Ã…land",
      "The French Republic",
      "FR",
      "RÃ©publique FranÃ§aise",
      "French Republic",
      "RÃ©publique franÃ§aise",
      "The Gabonese Republic",
      "GA",
      "RÃ©publique gabonaise",
      "RÃ©publique Gabonaise",
      "Gabonese Republic",
      "Gabun",
      "GE",
      "Sak'art'velo",
      "áƒ¡áƒáƒ¥áƒáƒ áƒ—áƒ•áƒ”áƒšáƒ",
      "Sakartvelo",
      "The Federal Republic of Germany",
      "DE",
      "Deutschland",
      "Bundesrepublik",
      "Federal Republic of Germany",
      "FRG",
      "The Republic of Ghana",
      "GH",
      "Republic of Ghana",
      "Gold Coast",
      "The Hellenic Republic",
      "GR",
      "Hellas",
      "Î•Î»Î»Î¬Ï‚",
      "Ellada",
      "Î•Î»Î»Î¬Î´Î±",
      "Hellenic Republic",
      "Ellas",
      "GD",
      "The Republic of Guatemala",
      "GT",
      "Republic of Guatemala",
      "The Republic of Guinea",
      "GN",
      "GuinÃ©e",
      "Gine",
      "Republic of Guinea",
      "French Guinea",
      "The Republic of Guinea-Bissau",
      "GW",
      "Republic of Guinea-Bissau",
      "Portuguese Guinea",
      "The Co-operative Republic of Guyana",
      "GY",
      "Co-operative Republic of Guyana",
      "British Guiana",
      "The Republic of Haiti",
      "HT",
      "HaÃ¯ti",
      "Ayiti",
      "Republic of Haiti",
      "The Republic of Honduras",
      "HN",
      "Republic of Honduras",
      "HU",
      "MagyarorszÃ¡g",
      "Magyarorszag",
      "The Republic of Iceland",
      "IS",
      "Ãsland",
      "Island",
      "Republic of Iceland",
      "The Republic of India",
      "IN",
      "BharÃ´t",
      "à¦­à¦¾à§°à¦¤",
      "à¦­à¦¾à¦°à¦¤",
      "BhÄrat",
      "àª­àª¾àª°àª¤",
      "à¤­à¤¾à¤°à¤¤",
      "BhÄrata",
      "à²­à²¾à²°à²¤",
      "BhÄratam",
      "à´­à´¾à´°à´¤à´‚",
      "BharÃ´tÃ´",
      "à¬­à¬¾à¬°à¬¤",
      "à¨­à¨¾à¨°à¨¤",
      "à¤­à¤¾à¤°à¤¤à¤®à¥",
      "BÄrata",
      "à®ªà®¾à®°à®¤à®®à¯",
      "BhÄratadÄ“sam",
      "à°­à°¾à°°à°¤ à°¦à±‡à°¶à°‚",
      "à¤­à¤¾à¤°à¤¤ à¤—à¤£à¤°à¤¾à¤œà¥à¤¯",
      "Hindustan",
      "Republic of India",
      "Bharat",
      "The Republic of Indonesia",
      "ID",
      "Republic of Indonesia",
      "Dutch East Indies",
      "The Islamic Republic of Iran",
      "IR",
      "ÄªrÄn",
      "Ø§ÛŒØ±Ø§Ù†",
      "Islamic Republic of Iran",
      "Persia",
      "The Republic of Iraq",
      "IQ",
      "Al-'Iraq",
      "Ø§Ù„Ø¹Ø±Ø§Ù‚",
      "ÃŽraq",
      "â€Ž",
      "Republic of Iraq",
      "Al-Iraq",
      "Irak",
      "Ø§Ù„Ø¹Ø±Ø§Ù‚â€Ž",
      "IE",
      "Irelend",
      "Ã‰ire",
      "Eire",
      "Irish Republic",
      "Republic of Ireland",
      "The State of Israel",
      "IL",
      "Isreal",
      "Yisra'el",
      "×™×©×¨××œ",
      "IsraÊ¼iyl",
      "Ø¥Ø³Ø±Ø§Ø¦ÙŠÙ„",
      "State of Israel",
      "Sion",
      "Yisrael",
      "Zion",
      "Ø¥Ø³Ø±Ø§Ø¦ÙŠÙ„ ×™×©×¨××œ",
      "The Italian Republic",
      "IT",
      "Itlay",
      "Italia",
      "Italian Republic",
      "The Republic of Cote D'Ivoire",
      "CI",
      "Cote D'Ivoire",
      "Republic of Cote D'Ivoire",
      "Cote dIvoire",
      "JM",
      "Jamaca",
      "Jamacia",
      "Rastas",
      "Rastafari",
      "JP",
      "Nihon",
      "Nippon",
      "æ—¥æœ¬",
      "The Hashemite Kingdom of Jordan",
      "JO",
      "Al-â€™Urdun",
      "Ø§Ù„Ø£Ø±Ø¯Ù†",
      "Hashemite Kingdom of Jordan",
      "The Republic of Kazakhstan",
      "KZ",
      "Qazaqstan",
      "ÒšÐ°Ð·Ð°Ò›ÑÑ‚Ð°Ð½",
      "Ù‚Ø§Ø²Ø§Ù‚Ø³ØªØ§Ù†",
      "KazakhstÃ¡n",
      "ÐšÐ°Ð·Ð°Ñ…ÑÑ‚Ð°Ð½",
      "Republic of Kazakhstankazak",
      "Kazakh",
      "Kazakstan",
      "The Republic of Kenya",
      "KE",
      "Republic of Kenya",
      "The Republic of Kiribati",
      "KI",
      "Republic of Kiribati",
      "The Republic of Kosovo",
      "XK",
      "Kosova",
      "ÐšÐ¾ÑÐ¾Ð²Ð¾",
      "Republic of Kosovo",
      "The State of Kuwait",
      "KW",
      "Dawlat ul-Kuwayt",
      "Ø¯ÙˆÙ„Ø© Ø§Ù„ÙƒÙˆÙŠØª",
      "il-ikwet",
      "Ø§Ù„ÙƒÙˆÙŠØª",
      "State of Kuwait",
      "Koweit",
      "The Kyrgyz Republic",
      "KG",
      "ÐšÑ‹Ñ€Ð³Ñ‹Ð·ÑÑ‚Ð°Ð½",
      "Kirgizija",
      "ÐšÐ¸Ñ€Ð³Ð¸Ð·Ð¸Ñ",
      "Kyrgyz Republickirghiz",
      "Kirghizia",
      "Kirghizstan",
      "Kirgiz",
      "Kirgizia",
      "Kirgizstan",
      "Kyrgyz Republic",
      "The Lao People's Democratic Republic",
      "LA",
      "Lao",
      "àº›àº°à»€àº—àº”àº¥àº²àº§",
      "Lao People's Democratic Republic",
      "The Republic of Latvia",
      "LV",
      "Latvija",
      "Republic of Latvia",
      "Latvijaz",
      "The Lebanese Republic",
      "LB",
      "LubnÄn",
      "Ù„Ø¨Ù†Ø§Ù†",
      "Lebanese Republic",
      "The Kingdom of Lesotho",
      "LS",
      "Kingdom of Lesotho",
      "Basutoland",
      "The Republic of Liberia",
      "LR",
      "Republic of Liberia",
      "LY",
      "âµâµ‰â´±âµ¢â´°",
      "LÄ«biyÄ",
      "Ù„ÙŠØ¨ÙŠØ§",
      "Socialist People's Libyan Arab",
      "Jamahiriya",
      "The Principality of Liechtenstein",
      "LI",
      "Principality of Liechtenstein",
      "The Republic of Lithuania",
      "LT",
      "Lietuva",
      "Republic of Lithuanialietuva",
      "The Grand Duchy of Luxembourg",
      "LU",
      "Luxemborg",
      "LÃ«tzebuerg",
      "Luxemburg",
      "Grand Duchy of Luxembourg",
      "The Republic of Macedonia",
      "MK",
      "Makedonija",
      "ÐœÐ°ÐºÐµÐ´Ð¾Ð½Ð¸Ñ˜Ð°",
      "Republic of Macedonia",
      "Macedon",
      "The Republic of Madagascar",
      "MG",
      "Madagasikara",
      "Republic of Madagascar",
      "Malagasy Republic",
      "The Republic of Malawi",
      "MW",
      "Republic of Malawi",
      "Nyasaland",
      "MY",
      "Malyasi",
      "MÇŽlÃ¡ixÄ«yÃ ",
      "é©¬æ¥è¥¿äºš",
      "MalÄ“á¹£iyÄ",
      "à®®à®²à¯‡à®šà®¿à®¯à®¾",
      "Federation of Malaysia",
      "The Republic of Maldives",
      "MV",
      "Dhivehi Raajje",
      "Republic of Maldives",
      "The Republic of Mali",
      "ML",
      "Republic of Mali",
      "French Sudan",
      "The Republic of Malta",
      "MT",
      "Republic of Malta",
      "The Republic of the Marshall Islands",
      "MH",
      "AorÅkin MÌ§ajeÄ¼",
      "Republic of the Marshall Islands",
      "The Islamic Republic of Mauritania",
      "MR",
      "Muritan",
      "Agawec",
      "âµŽâµ“âµ”âµ‰âµœâ´°âµ",
      "â´°â´³â´°âµ¡âµ›",
      "MÅ«rÄ«tÄnyÄ",
      "Ù…ÙˆØ±ÙŠØªØ§Ù†ÙŠØ§",
      "Ø§Ù„Ù…ÙˆØ±ÙŠØªØ§Ù†ÙŠØ©",
      "Islamic Republic of Mauritania",
      "Mauritanie",
      "Muritaniya",
      "The Republic of Mauritius",
      "MU",
      "Maurice",
      "Moris",
      "Republic of Mauritius",
      "The United Mexican States",
      "MX",
      "Mexcio",
      "Mexixo",
      "MÃ©xico",
      "MÄ“xihco",
      "Mexicanos",
      "United Mexican States",
      "The Federated States of Micronesia",
      "FM",
      "Federated States of Micronesia",
      "The Republic of Moldova",
      "MD",
      "Republic of Moldova",
      "Moldavia",
      "The Principality of Monaco",
      "MC",
      "Principality of Monaco",
      "MN",
      "Mongol Uls",
      "ÐœÐ¾Ð½Ð³Ð¾Ð» Ð£Ð»Ñ",
      "á ®á ¤á ©á ­á ¤á ¯ á ¤á ¯á ¤á °",
      "MongÎ³ol Ulus",
      "ÐœÐ¾Ð½Ð³Ð¾Ð» ÑƒÐ»Ñ",
      "Outer Mongolia",
      "MongÎ³ol ulus",
      "ME",
      "Crna Gora",
      "Ð¦Ñ€Ð½Ð° Ð“Ð¾Ñ€Ð°",
      "The Kingdom of Morocco",
      "MA",
      "Amerruk",
      "ElmeÉ£rib",
      "â´°âµŽâµ”âµ”âµ“â´½",
      "âµâµŽâµ–âµ”âµ‰â´±",
      "Al-maÉ£rÃ©b",
      "Ø§Ù„Ù…ØºØ±Ø¨",
      "Kingdom of Moroccoal-Magrib",
      "Maroc",
      "Marruecos",
      "The Republic of Mozambique",
      "MZ",
      "MoÃ§ambique",
      "Republic of Mozambique",
      "Mocambique",
      "The Republic of Namibia",
      "NA",
      "NamibiÃ«",
      "Republic of Namibia",
      "South west africa",
      "The Republic of Nauru",
      "NR",
      "Naoero",
      "Republic of Nauru",
      "The Federal Democratic Republic of Nepal",
      "NP",
      "NepÄl",
      "à¤¨à¥‡à¤ªà¤¾à¤²",
      "Federal Democratic Republic of Nepal",
      "The Kingdom of the Netherlands",
      "NL",
      "Nederland",
      "NederlÃ¢n",
      "Holland",
      "Kingdom of the Netherlands",
      "NZ",
      "Zealnd",
      "Zeland",
      "Aotearoa",
      "The Republic of Nicaragua",
      "NI",
      "Republic of Nicaragua",
      "The Republic of Niger",
      "NE",
      "Nijar",
      "Republic of Niger",
      "The Federal Republic of Nigeria",
      "NG",
      "Nijeriya",
      "NaÃ­jÃ­rÃ­Ã ",
      "Federal Republic of Nigeria",
      "The Democratic People's Republic of Korea",
      "KP",
      "ì¡°ì„  / æœé®®",
      "BukchosÅn",
      "ë¶ì¡°ì„ ",
      "Democratic People's Republic of Koread",
      "PRK",
      "DPRK",
      "The Kingdom of Norway",
      "NO",
      "Norge",
      "Noreg",
      "Kingdom of Norway",
      "The Sultanate of Oman",
      "OM",
      "â€˜UmÄn",
      "Ø¹ÙÙ…Ø§Ù†",
      "Ø¹Ù…Ø§Ù†",
      "Sultanate of Oman",
      "Muscat and Oman",
      "The Islamic Republic of Pakistan",
      "PK",
      "Ù¾Ø§Ú©Ø³ØªØ§Ù†",
      "Islamic Republic of Pakistan",
      "West Pakistan",
      "The Republic of Palau",
      "PW",
      "Belau",
      "Republic of Palau",
      "Pelew",
      "The Republic of Panama",
      "PA",
      "PanamÃ¡",
      "Republic of Panama",
      "The Independent State of Papua New Guinea",
      "PG",
      "Papua Niugini",
      "Independent State of Papua New Guinea",
      "PNG",
      "The Republic of Paraguay",
      "PY",
      "ParaguÃ¡i",
      "Republic of Paraguay",
      "The Republic of Peru",
      "PE",
      "PerÃº",
      "Piruw",
      "Republic of Peru",
      "The Republic of the Philippines",
      "PH",
      "Phillippine",
      "Pilipinas",
      "Pinas",
      "Republic of the Philippines",
      "Philippine Islands",
      "The Republic of Poland",
      "PL",
      "Polska",
      "Republic of Poland",
      "The Portuguese Republic",
      "PT",
      "Portuguesa",
      "Portuguese Republic",
      "The State of Qatar",
      "QA",
      "Ù‚Ø·Ø±",
      "State of Qatar",
      "Katar",
      "Ztate of Katar",
      "RO",
      "Rumania",
      "Roumania",
      "RomÃ¢nia",
      "The Russian Federation",
      "RU",
      "Rossiya",
      "RossiÃ¢",
      "Ð Ð¾ÑÑÐ¸Ñ1",
      "Ð Ð¾ÑÑÐ¸Ð¹ÑÐºÐ°Ñ",
      "Ð Ð¾ÑÑÐ¸Ñ",
      "Russian Federation",
      "The Republic of Rwanda",
      "RW",
      "Republic of Rwandaruanda",
      "Rwandese Republic",
      "The Independent State of Samoa",
      "WS",
      "Samo",
      "Amerika SÄmoa",
      "Independent State of Samoa",
      "Samoa i Sisifo",
      "Western samoa",
      "The Republic of San Marino",
      "SM",
      "RSM",
      "Republic of San Marino",
      "Repubblica",
      "The Democratic Republic of Sao Tome and Principe",
      "ST",
      "SÃ£o TomÃ© e PrÃ­ncipe",
      "Democratic Republic of Sao Tome and Principe",
      "Sao Thome e Principe",
      "Sao Tome e Principe",
      "St. Thomas and Principe",
      "The Kingdom of Saudi Arabia",
      "SA",
      "Al-Mamlaka Al-â€˜Arabiyyah as Saâ€˜Å«diyyah",
      "Ø§Ù„Ù…Ù…Ù„ÙƒØ© Ø§Ù„Ø¹Ø±Ø¨ÙŠØ© Ø§Ù„Ø³Ø¹ÙˆØ¯ÙŠØ©",
      "Ø§Ù„Ø³Ø¹ÙˆØ¯ÙŠØ©",
      "Kingdom of Saudi Arabia",
      "The Republic of Senegal",
      "SN",
      "SÃ©nÃ©gal",
      "Republic of Senegal",
      "The Republic of Serbia",
      "RS",
      "Srbija",
      "Ð¡Ñ€Ð±Ð¸Ñ˜Ð°",
      "Republic of Serbia",
      "Ð¡Ñ€Ð±Ð¸Ñ˜Ð° Srbija",
      "The Republic of Seychelles",
      "SC",
      "Sesel",
      "Republic of Seychelles",
      "The Republic of Sierra Leone",
      "SL",
      "Republic of Sierra Leone",
      "The Republic of Singapore",
      "SG",
      "Singapura",
      "XÄ«njiÄpÅ",
      "æ–°åŠ å¡",
      "Singapur",
      "à®šà®¿à®™à¯à®•à®ªà¯à®ªà¯‚à®°à¯",
      "à®šà®¿à®™à¯à®•à®ªà¯à®ªà¯‚à®°à¯à®•à¯",
      "à®Ÿà®¿à®¯à®°à®šà¯",
      "æ–°åŠ å¡å…±å’Œå›½",
      "Republic of Singapore",
      "à®šà®¿à®™à¯à®•à®ªà¯à®ªà¯‚à®°à¯ à®•à¯à®Ÿà®¿à®¯à®°à®šà¯",
      "The Slovak Republic",
      "SK",
      "Slovensko",
      "SlovenskÃ¡",
      "Slovak Republic",
      "The Republic of Slovenia",
      "SI",
      "Slovenija",
      "Republic of Slovenia",
      "SB",
      "Solomon Aelan",
      "Solomons",
      "Federal Republic of Somalia",
      "SO",
      "Soomaaliya",
      "aÅŸ-ÅžÅ«mÄl",
      "Ø§Ù„ØµÙˆÙ…Ø§Ù„",
      "Federal Republic of Somaliaaiai",
      "Al-itihaad al-islamiya",
      "Al itihaad al islamiya",
      "The Republic of South Africa",
      "ZA",
      "Suid-Afrika",
      "iNingizimu Afrika",
      "uMzantsi Afrika",
      "Afrika-Borwa",
      "Afrika Borwa",
      "Aforika Borwa",
      "Afurika Tshipembe",
      "Afrika Dzonga",
      "iSewula Afrika",
      "RSA",
      "Republic of South Africa",
      "The Republic of Korea",
      "KR",
      "Hanguk",
      "í•œêµ­ / éŸ“åœ‹",
      "Namhan",
      "ë‚¨í•œ",
      "Republic of Korea",
      "The Republic of South Sudan",
      "SS",
      "Republic of South Sudan",
      "Ø§Ù„Ø³ÙˆØ¯Ø§Ù†",
      "The Kingdom of Spain",
      "ES",
      "EspaÃ±a",
      "Espanya",
      "Espainia",
      "Espanha",
      "Kingdom of Spain",
      "The Democratic Socialist Republic of Sri Lanka",
      "LK",
      "Sri LankÄ",
      "à·à·Šâ€à¶»à·“ à¶½à¶‚à¶šà·à·€",
      "à®‡à®²à®™à¯à®•à¯ˆ",
      "à·à·Šâ€à¶»à·“ à¶½à¶‚à¶šà·",
      "Ceylon",
      "Democratic Socialist Republic of Sri Lanka",
      "à·à·Šâ€à¶»à·“ à¶½à¶‚à¶šà· à®‡à®²à®™à¯à®•à¯ˆ",
      "The Federation of Saint Christopher and Nevis",
      "KN",
      "Federation of Saint Christopher and Nevis",
      "St. Kitts and Nevis",
      "Saint Lucia",
      "LC",
      "St. Lucia",
      "Saint Vincent and the Grenadines",
      "VC",
      "St. Vincent",
      "The Republic of the Sudan",
      "SD",
      "As-Sudan",
      "Republic of the Sudan",
      "Soudan",
      "The Republic of Suriname",
      "SR",
      "à¤¶à¤°à¥à¤¨à¤®à¥",
      "Sarnam",
      "Sranangron",
      "Republic of Suriname",
      "Sarnam Sranangron",
      "The Kingdom of Swaziland",
      "SZ",
      "Umbuso weSwatini",
      "kaNgwane",
      "Eswatini",
      "weSwatini",
      "Swatini",
      "Ngwane",
      "Kingdom of Swaziland",
      "Kingdom of Eswatini",
      "weSwatini Swatini Ngwane",
      "The Kingdom of Sweden",
      "SE",
      "Sverige",
      "Kingdom of Sweden",
      "The Swiss Confederation",
      "CH",
      "Switerland",
      "Schweiz",
      "Suisse",
      "Svizzera",
      "Svizra",
      "Swiss Confederation",
      "The Syrian Arab Republic",
      "SY",
      "Suriyah",
      "Ø³ÙˆØ±ÙŠØ©",
      "Syrian Arab Republic",
      "The Republic of Tajikistan",
      "TJ",
      "Tojikistan",
      "Ð¢Ð¾Ò·Ð¸ÐºÐ¸ÑÑ‚Ð¾Ð½",
      "ToÃ§ikiston",
      "Republic of Tajikistantadjik",
      "Tadzhik",
      "Tadzhikistan",
      "Tajik",
      "The United Republic of Tanzania",
      "TZ",
      "United Republic of Tanzania",
      "The Kingdom of Thailand",
      "TH",
      "Mueang Thai",
      "Prathet Thai",
      "Ratcha-anachak Thai",
      "à¹€à¸¡à¸·à¸­à¸‡à¹„à¸—à¸¢",
      "à¸›à¸£à¸°à¹€à¸—à¸¨à¹„à¸—à¸¢",
      "à¸£à¸²à¸Šà¸­à¸²à¸“à¸²à¸ˆà¸±à¸à¸£à¹„à¸—à¸¢",
      "Kingdom of Thailand",
      "Siam",
      "The Commonwealth of The Bahamas",
      "BS",
      "Commonwealth of Bahamas",
      "The Republic of The Gambia",
      "GM",
      "Islamic Republic of Gambia",
      "The Togolese Republic",
      "TG",
      "Togolese",
      "Togolese Republic",
      "The Kingdom of Tonga",
      "TO",
      "Kingdom of Tonga",
      "Friendly islands",
      "The Republic of Trinidad and Tobago",
      "TT",
      "Republic of Trinidad and Tobago",
      "The Tunisian Republic",
      "TN",
      "Tunes",
      "âµœâµ“âµâµ™",
      "TÅ«ns",
      "ØªÙˆÙ†Ø³",
      "Tunisian Republic",
      "The Republic of Turkey",
      "TR",
      "TÃ¼rkiye",
      "Turkiye",
      "Republic of Turkey",
      "TM",
      "TÃ¼rkmenistan",
      "Turkmen",
      "Turkmenia",
      "Turkomen",
      "TV",
      "JÃ¨rri",
      "Ellice Islands",
      "The Republic of Uganda",
      "UG",
      "Republic of Uganda",
      "UA",
      "UkraÑ—na",
      "Ð£ÐºÑ€Ð°Ñ—Ð½Ð°",
      "Ukrayina",
      "The United Arab Emirates",
      "AE",
      "arab emir ates",
      "arab emirates",
      "Al-â€™ImÄrat Al-â€˜Arabiyyah Al-Muttaá¸¥idah",
      "Ø§Ù„Ø¥Ù…Ø§Ø±Ø§Øª Ø§Ù„Ø¹Ø±Ø¨ÙŠÙ‘Ø© Ø§Ù„Ù…ØªÙ‘Ø­Ø¯Ø©",
      "Ø§Ù„Ø¥Ù…Ø§Ø±Ø§Øª",
      "UAE",
      "The United Kingdom of Great Britain and Northern Ireland",
      "GB",
      "Bitain",
      "Briain",
      "Britiain",
      "Brtain",
      "Englsnd",
      "Grat Britain",
      "Great Britan",
      "Gret Britain",
      "Scottland",
      "Y Deyrnas Unedig",
      "Unitit Kinrick",
      "RÃ¬oghachd Aonaichte",
      "RÃ­ocht Aontaithe",
      "An Rywvaneth Unys",
      "UK",
      "United Kingdom of Great Britain and Northern Ireland",
      "Britain",
      "U.K.",
      "The United States of America",
      "US",
      "Ameeri",
      "Ameica",
      "Amerca",
      "Amercia",
      "Ameria",
      "Amrica",
      "Anmerica",
      "Unit States",
      "Unite States",
      "United Sat",
      "United Staes",
      "United Stated",
      "United Stats",
      "United Sttes",
      "Unites States",
      "Untied State",
      "americia",
      "Estados Unidos",
      "Ã‰tats-Unis",
      "Amelika-hui-pu-'ia",
      "USA",
      "United States of America",
      "The States",
      "U.S.",
      "U.S.A.",
      "The Oriental Republic of Uruguay",
      "UY",
      "RepÃºblica Oriental del Uruguay",
      "Oriental Republic of Uruguay",
      "Union of Soviet Socialist Republics",
      "SU",
      "Ð¡Ð¾ÑŽÐ· Ð¡Ð¾Ð²ÐµÑ‚ÑÐºÐ¸Ñ… Ð¡Ð¾Ñ†Ð¸Ð°Ð»Ð¸ÑÑ‚Ð¸Ñ‡ÐµÑÐºÐ¸Ñ… Ð ÐµÑÐ¿ÑƒÐ±Ð»Ð¸Ðº",
      "The Republic of Uzbekistan",
      "UZ",
      "Oâ€˜zbekiston",
      "ÐŽÐ·Ð±ÐµÐºÐ¸ÑÑ‚Ð¾Ð½",
      "O'zbekstan",
      "Republic of Uzbekistan",
      "Uzbek",
      "Oâ€™zbekstan",
      "The Republic of Vanuatu",
      "VU",
      "Republic of Vanuatu",
      "New Hebrides",
      "Vatican City State",
      "VA",
      "E Civitate Vaticana",
      "Holy See",
      "Citta del Vaticano",
      "The Bolivarian Republic of Venezuela",
      "VE",
      "Venezula",
      "Bolivarian Republic of Venezuela",
      "The Socialist Republic of Vietnam",
      "VN",
      "Veitnam",
      "Vietman",
      "Viá»‡t Nam",
      "Socialist Republic of Vietnam",
      "Annam",
      "The Republic of Yemen",
      "YE",
      "Al-Yaman",
      "Ø§Ù„ÙŠÙ…Ù†",
      "Republic of Yemen",
      "Socialist Federal Republic of Yugoslavia",
      "YU",
      "Yugosav",
      "Jugoslavija",
      "The Republic of Zambia",
      "ZM",
      "Republic of Zambia",
      "Northern Rhodesia",
      "The Republic of Zimbabwe",
      "ZW",
      "Republic of Zimbabwe",
      "Rhodesia",
      "AX",
      "Ahvenanmaa",
      "Aland",
      "AI",
      "AQ",
      "AW",
      "Bailiwick of Guernsey",
      "GG",
      "Island of Guernsey",
      "Bailiwick of Jersey",
      "JE",
      "Island of Jersey",
      "BM",
      "Bermudas",
      "BQ-BO",
      "KY",
      "ES-CE",
      "Collectivity of Saint Martin",
      "MF",
      "Sint Maarten",
      "Commonwealth of Puerto Rico",
      "PR",
      "Porto Rico",
      "Puarto Rico",
      "Commonwealth of the Northern Mariana Islands",
      "MP",
      "Northern Marianas",
      "CK",
      "Country of CuraÃ§ao",
      "CW",
      "KÃ²rsou",
      "Curacao",
      "Emirate of Abu Dhabi",
      "AE-AZ",
      "Emirate of Ajman",
      "AE-AJ",
      "Emirate of Dubai",
      "AE-DU",
      "Emirate of Fujairah",
      "AE-FU",
      "Emirate of Ras al-Khaimah",
      "AE-RK",
      "Emirate of Sharjah",
      "AE-SH",
      "Emirate of Umm al-Quwain",
      "AE-UQ",
      "FK",
      "Las Malvinas",
      "FO",
      "FÃ¸royar",
      "FÃ¦rÃ¸erne",
      "Aeroes",
      "Faroes",
      "GF",
      "Guyane",
      "PF",
      "PolynÃ©sie franÃ§aise",
      "PolynÃ©sie FranÃ§aise",
      "French Oceania",
      "GI",
      "GL",
      "Kalaallit Nunaat",
      "GrÃ¸nland",
      "Gronland",
      "GP",
      "Hong Kong Special Administrative Region",
      "HK",
      "Heung Gong",
      "é¦™æ¸¯",
      "IM",
      "Ellan Vannin",
      "Macao Special Administrative Region",
      "MO",
      "MQ",
      "YT",
      "ES-ML",
      "MS",
      "NC",
      "Nouvelle-CalÃ©donie",
      "NU",
      "NiuÄ“",
      "PN",
      "Pitcairn",
      "Henderson",
      "Ducie and Oeno Islands",
      "RE",
      "Reunion",
      "BQ-SA",
      "BL",
      "St. Barthelemy",
      "St Barth",
      "SH-HL",
      "PM",
      "Saint-Pierre et Miquelon",
      "BQ-SE",
      "SX",
      "SJ",
      "TW",
      "ZhÅnghuÃ¡ MÃ­nguÃ³",
      "TÃ¡iwÄn",
      "ä¸­è¯æ°‘åœ‹",
      "è‡ºç£/å°ç£",
      "å°ç£",
      "è‡ºç£",
      "Chinese Taipei",
      "Territory of American Samoa",
      "AS",
      "Eastern Samoa",
      "Territory of Christmas Island",
      "CX",
      "Territory of Guam",
      "GU",
      "GuÃ¥hÃ¥n",
      "Territory of Norfolk Island",
      "NF",
      "Territory of the Cocos (Keeling) Islands",
      "CC",
      "Territory of the Wallis and Futuna Islands",
      "WF",
      "Wallis-et-Futuna",
      "Uvea mo Futuna",
      "The British Indian Ocean Territory",
      "IO",
      "I.O.T.",
      "IOT",
      "The Occupied Palestinian Territories",
      "PS",
      "ÙÙ„Ø³Ø·ÙŠÙ†",
      "The Virgin Islands",
      "VG",
      "Virgina Islands",
      "Virgin Islands",
      "BVI",
      "B.V.I.",
      "TK",
      "SH-TA",
      "TC",
      "Virgin Islands of the United States",
      "VI",
      "American Virgin Islands",
      "EH",
      "Ù„ØµØ­Ø±Ø§Ø¡ Ø§Ù„ØºØ±Ø¨ÙŠØ©",
      "GBN",
      "NIR",
      "WLS",
      "SCT",
      "ENG",
      "BAT",
      "Ascension Island",
      "SH-AC",
      "UM-81",
      "BV",
      "TF",
      "UM-84",
      "UM-86",
      "UM-89",
      "UM-67",
      "UM-71",
      "UM-76",
      "UM-95",
      "South Georgia and the South Sandwich Islands",
      "GS",
      "Sovereign Base Areas of Akrotiri and Dhekelia",
      "XQZ",
      "XXD",
      "Territory of Heard Island and McDonald Islands",
      "HM",
      "Albion",
      "The Beautiful Country",
    ],
    "queryTokenizer": [Function],
  },
]
`;
